2007-12-4  Cody Russell  <cody@jhu.edu>

	Merge from trunk:

	* modules/engines/ms-windows/Theme/gtk-2.0/gtkrc:
	Disable beeps when backspacing in textviews by default on
	Win32 systems. (#490624, Daniel Atallah)

2007-12-4  Cody Russell  <bratsche@gnome.org>

	Merge from trunk:

	* gtk/gtkpaned.c: (gtk_paned_set_position) [Win32]:
	On Windows, queue a redraw of child2 whenever we set
	the pane handle position.  This is unfortunately kind
	of hacky, but solves the visual artifacts that were
	occuring on at least certain types of child widgets
	(e.g., text views and tree views) that are inside
	horizontal or vertical panes. (#144269)

2007-10-05  Murray Cumming  <murrayc@murrayc.com>

	* gtk/gtkprintoperation.c: (print_pages_idle):
	Revert the change on 2007-04-29 ("Also check
	the default handler when deciding whether to emit the
	paginate signal.  (#345345, Yevgen Muntyan)").
	This stopped printing from working in gtkmm, and is apparently 
	not appropriate anyway - bug #482089.

2007-08-27  Stefan Kost  <ensonic@users.sf.net>

	Merge from trunk:

	* gtk/gtkwindow.c: Update menu accelerators, when adding/removing
	AccelGroups dynamically. (#469374)

2007-08-27  Cody Russell  <bratsche@gnome.org>

	Merge from trunk:

        * modules/engines/ms-windows/msw_style.c: Correct draw_box()
        function to check detail for "notebook".  This fixes a problem
        where notebooks without visible headers were not styling
        correctly. (#470033, Daniel Atallah and Cody Russell)

2007-08-16  Cody Russell  <bratsche@gnome.org>

	Merge from trunk:

	* gdk/win32/cursor.bdf: Committing changes to the source
	bdf font file that I forgot to commit yesterday for #458088.

2007-08-16  Cody Russell  <bratsche@gnome.org>

	Merge from trunk:

	* gdk/win32/xcursors.h: Modified the sb_h_double_arrow and
	sb_v_double_arrow mouse cursors to match the ones that Windows
	uses for split container controls.  This allows our paned