@@ -2,6 +2,13 @@
 
 	Merge from trunk:
 
+	* modules/engines/ms-windows/msw_style.c: Draw focus rect for
+	buttons with relief set to GTK_RELIEF_NONE. (#487954)
+
+2007-12-4  Cody Russell  <cody@jhu.edu>
+
+	Merge from trunk:
+
 	* modules/engines/ms-windows/Theme/gtk-2.0/gtkrc:
 	Disable beeps when backspacing in textviews by default on
 	Win32 systems. (#490624, Daniel Atallah)
